use std::sync::Arc;
use axum::{
    extract::{State, Path},
    response::Json,
    http::StatusCode,
};
use serde::{Deserialize, Serialize};
use tracing::{info, warn, error};
use uuid::Uuid;

use crate::api::ApiState;

#[derive(Deserialize)]
pub struct CreateMultisigRequest {
    pub name: String,
    pub required_signatures: usize,
    pub participants: Vec<MultisigParticipant>,
    pub use_zquic_coordination: Option<bool>, // NEW: Use ZQUIC for coordination
}

#[derive(Deserialize, Serialize, Clone)]
pub struct MultisigParticipant {
    pub wallet_id: String,
    pub public_key: String,
    pub endpoint: Option<String>, // ZQUIC endpoint for this participant
}

#[derive(Serialize)]
pub struct CreateMultisigResponse {
    pub multisig_id: String,
    pub multisig_address: String,
    pub participants: Vec<MultisigParticipant>,
    pub required_signatures: usize,
    pub zquic_coordination_enabled: bool,
}

/// Create a new multi-signature wallet with ZQUIC coordination
pub async fn create_multisig(
    State(state): State<ApiState>,
    Json(request): Json<CreateMultisigRequest>,
) -> Result<Json<CreateMultisigResponse>, StatusCode> {
    info!("ü§ù Creating multisig wallet: {} ({}/{})", 
          request.name, request.required_signatures, request.participants.len());
    
    // Validate required signatures
    if request.required_signatures > request.participants.len() {
        return Err(StatusCode::BAD_REQUEST);
    }
    
    if request.required_signatures == 0 {
        return Err(StatusCode::BAD_REQUEST);
    }
    
    // Validate all participant wallets exist
    for participant in &request.participants {
        match state.wallet_manager.get_wallet(&participant.wallet_id).await {
            Ok(Some(_)) => {}
            Ok(None) => {
                error!("‚ùå Participant wallet not found: {}", participant.wallet_id);
                return Err(StatusCode::BAD_REQUEST);
            }
            Err(e) => {
                error!("‚ùå Failed to validate participant wallet: {}", e);
                return Err(StatusCode::INTERNAL_SERVER_ERROR);
            }
        }
    }
    
    let multisig_id = Uuid::new_v4().to_string();
    let zquic_coordination_enabled = request.use_zquic_coordination.unwrap_or(true) && 
                                   state.zquic_transport.is_some();
    
    // Create multisig address (simplified - would use proper derivation)
    let multisig_address = format!("multisig_{}", &multisig_id[..8]);
    
    if zquic_coordination_enabled {
        info!("‚ö° Enabling ZQUIC coordination for multisig: {}", multisig_id);
        
        // TODO: Set up ZQUIC coordination channels
        if let Some(ref _zquic) = state.zquic_transport {
            // zquic.create_multisig_channel(&multisig_id, &request.participants).await?;
        }
    }
    
    // TODO: Store multisig configuration in ledger
    // state.ledger.store_multisig(&multisig_config).await?;
    
    Ok(Json(CreateMultisigResponse {
        multisig_id,
        multisig_address,
        participants: request.participants,
        required_signatures: request.required_signatures,
        zquic_coordination_enabled,
    }))
}

#[derive(Deserialize)]
pub struct SignMultisigRequest {
    pub transaction_id: String,
    pub wallet_id: String,
    pub passphrase: Option<String>,
    pub coordinate_via_zquic: Option<bool>, // NEW: Coordinate signing via ZQUIC
}

#[derive(Serialize)]
pub struct SignMultisigResponse {
    pub multisig_id: String,
    pub transaction_id: String,
    pub signature: String,
    pub signatures_collected: usize,
    pub signatures_required: usize,
    pub coordinated_via_zquic: bool,
    pub ready_for_broadcast: bool,
}

/// Sign a multi-signature transaction with ZQUIC coordination
pub async fn sign_multisig(
    State(state): State<ApiState>,
    Path(multisig_id): Path<String>,
    Json(request): Json<SignMultisigRequest>,
) -> Result<Json<SignMultisigResponse>, StatusCode> {
    info!("‚úèÔ∏è  Signing multisig transaction: {} for multisig: {}", 
          request.transaction_id, multisig_id);
    
    // TODO: Get multisig configuration
    // let multisig_config = state.ledger.get_multisig(&multisig_id).await?;
    
    // Validate wallet is a participant
    // if !multisig_config.participants.contains(&request.wallet_id) {
    //     return Err(StatusCode::FORBIDDEN);
    // }
    
    let coordinate_via_zquic = request.coordinate_via_zquic.unwrap_or(true) && 
                              state.zquic_transport.is_some();
    
    // Sign the transaction
    let signature = if coordinate_via_zquic {
        info!("‚ö° Coordinating multisig signing via ZQUIC");
        sign_with_zquic_coordination(&state, &multisig_id, &request).await?
    } else {
        info!("üîê Signing multisig transaction locally");
        sign_locally(&state, &request).await?
    };
    
    // TODO: Collect signatures and check if ready for broadcast
    let signatures_collected = 1; // Placeholder
    let signatures_required = 2; // Placeholder
    let ready_for_broadcast = signatures_collected >= signatures_required;
    
    if ready_for_broadcast && coordinate_via_zquic {
        info!("üì° Multisig transaction ready - coordinating broadcast via ZQUIC");
        // TODO: Coordinate broadcast with other participants via ZQUIC
    }
    
    Ok(Json(SignMultisigResponse {
        multisig_id,
        transaction_id: request.transaction_id,
        signature,
        signatures_collected,
        signatures_required,
        coordinated_via_zquic: coordinate_via_zquic,
        ready_for_broadcast,
    }))
}

/// Sign multisig transaction with ZQUIC coordination
async fn sign_with_zquic_coordination(
    state: &ApiState,
    multisig_id: &str,
    request: &SignMultisigRequest,
) -> Result<String, StatusCode> {
    if let Some(ref _zquic) = state.zquic_transport {
        // TODO: Implement ZQUIC coordination
        // 1. Notify other participants of signing intent
        // 2. Coordinate signing order to prevent conflicts
        // 3. Share signature with other participants
        // 4. Verify other participants' signatures
        
        // For now, just sign locally
        sign_locally(state, request).await
    } else {
        Err(StatusCode::SERVICE_UNAVAILABLE)
    }
}

/// Sign multisig transaction locally
async fn sign_locally(
    _state: &ApiState,
    _request: &SignMultisigRequest,
) -> Result<String, StatusCode> {
    // TODO: Implement actual signing logic
    // 1. Get wallet private key
    // 2. Sign transaction hash
    // 3. Return signature
    
    // Placeholder
    Ok(format!("signature_{}_{}", _request.wallet_id, _request.transaction_id))
}

#[derive(Deserialize)]
pub struct BroadcastMultisigRequest {
    pub signatures: Vec<MultisigSignature>,
    pub broadcast_via_zquic: Option<bool>, // NEW: Broadcast via ZQUIC network
}

#[derive(Deserialize, Serialize)]
pub struct MultisigSignature {
    pub wallet_id: String,
    pub signature: String,
    pub public_key: String,
}

#[derive(Serialize)]
pub struct BroadcastMultisigResponse {
    pub transaction_id: String,
    pub broadcast_status: String,
    pub broadcasted_via_zquic: bool,
    pub network_confirmations: usize,
}

/// Broadcast a completed multi-signature transaction
pub async fn broadcast_multisig(
    State(state): State<ApiState>,
    Path(multisig_id): Path<String>,
    Json(request): Json<BroadcastMultisigRequest>,
) -> Result<Json<BroadcastMultisigResponse>, StatusCode> {
    info!("üì° Broadcasting multisig transaction for: {}", multisig_id);
    
    // TODO: Validate all required signatures are present
    // let multisig_config = state.ledger.get_multisig(&multisig_id).await?;
    // if request.signatures.len() < multisig_config.required_signatures {
    //     return Err(StatusCode::BAD_REQUEST);
    // }
    
    let broadcast_via_zquic = request.broadcast_via_zquic.unwrap_or(true) && 
                             state.zquic_transport.is_some();
    
    let transaction_id = if broadcast_via_zquic {
        info!("‚ö° Broadcasting via ZQUIC network");
        broadcast_via_zquic_network(&state, &multisig_id, &request).await?
    } else {
        info!("üì° Broadcasting via standard network");
        broadcast_via_standard_network(&state, &multisig_id, &request).await?
    };
    
    Ok(Json(BroadcastMultisigResponse {
        transaction_id,
        broadcast_status: "pending".to_string(),
        broadcasted_via_zquic: broadcast_via_zquic,
        network_confirmations: 0,
    }))
}

/// Broadcast multisig transaction via ZQUIC network
async fn broadcast_via_zquic_network(
    state: &ApiState,
    _multisig_id: &str,
    _request: &BroadcastMultisigRequest,
) -> Result<String, StatusCode> {
    if let Some(ref _zquic) = state.zquic_transport {
        // TODO: Broadcast via ZQUIC to GhostD and peer network
        // 1. Send to GhostD via ZQUIC
        // 2. Propagate to other ZQUIC peers
        // 3. Get transaction confirmation
        
        // Placeholder
        Ok(Uuid::new_v4().to_string())
    } else {
        Err(StatusCode::SERVICE_UNAVAILABLE)
    }
}

/// Broadcast multisig transaction via standard network
async fn broadcast_via_standard_network(
    _state: &ApiState,
    _multisig_id: &str,
    _request: &BroadcastMultisigRequest,
) -> Result<String, StatusCode> {
    // TODO: Broadcast via standard HTTP/gRPC to GhostD
    
    // Placeholder
    Ok(Uuid::new_v4().to_string())
}

#[derive(Serialize)]
pub struct MultisigStatus {
    pub multisig_id: String,
    pub address: String,
    pub participants: Vec<MultisigParticipant>,
    pub required_signatures: usize,
    pub pending_transactions: Vec<PendingMultisigTransaction>,
    pub zquic_coordination_enabled: bool,
}

#[derive(Serialize)]
pub struct PendingMultisigTransaction {
    pub transaction_id: String,
    pub signatures_collected: usize,
    pub signatures_required: usize,
    pub created_at: String,
    pub expires_at: Option<String>,
}

/// Get multisig wallet status
pub async fn get_multisig_status(
    State(_state): State<ApiState>,
    Path(multisig_id): Path<String>,
) -> Result<Json<MultisigStatus>, StatusCode> {
    info!("üîç Getting multisig status: {}", multisig_id);
    
    // TODO: Get actual multisig status from ledger
    // let multisig_config = state.ledger.get_multisig(&multisig_id).await?;
    // let pending_transactions = state.ledger.get_pending_multisig_transactions(&multisig_id).await?;
    
    // Placeholder response
    let status = MultisigStatus {
        multisig_id,
        address: "multisig_placeholder".to_string(),
        participants: vec![],
        required_signatures: 2,
        pending_transactions: vec![],
        zquic_coordination_enabled: true,
    };
    
    Ok(Json(status))
}
